# watchtower

./: .editorconfig  .gitignore  .watchtower-bootstrap  .watchtower-source-00.b64  .watchtower-source-01.b64  .watchtower-source-02.b64  .watchtower-source-03.b64  .watchtower-source-04.b64  .watchtower-source-05.b64  .watchtower-source-06.b64  .watchtower-source-07.b64  .watchtower-source-08.b64  .watchtower-source-09.b64  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: bootstrap-import-trigger.yml  bootstrap-import.yml  ci.yml
docs/: architecture.md  checkpoints.md  compatibility.md  event-schema.md  feedback.md  installation.md  vision.md
examples/: claude-code.settings.json  codex.hooks.json
scripts/: smoke-test.sh  smoke_test.py
src/watchtower/: __init__.py  __main__.py  api.py  checkpoints.py  cli.py  config.py  dashboard.py  engine.py  fingerprints.py  installer.py  migrations.py  models.py  notifier.py  policy.py  privacy.py  store.py  store_checkpoints.py  store_events.py  store_feedback.py  store_interventions.py  store_support.py
src/watchtower/adapters/: __init__.py  hooks.py
src/watchtower/detectors/: __init__.py  agent_conflict.py  base.py  compaction_risk.py  repeated_failure.py  verification_gap.py
tests/: conftest.py  test_adapters.py  test_api.py  test_checkpoints.py  test_cli.py  test_engine.py  test_feedback.py  test_installer.py  test_migrations.py  test_privacy.py  test_store.py
