[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-watchtower"
version = "0.2.0"
description = "A local-first proactivity control plane for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ferdinando Bonsegna" }]
keywords = ["ai", "agents", "proactive", "claude-code", "codex", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
watchtower = "watchtower.cli:main"

[project.urls]
Homepage = "https://github.com/ferdinandobons/watchtower"
Issues = "https://github.com/ferdinandobons/watchtower/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/watchtower/dashboard.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src/watchtower"]
show_error_codes = true
warn_unused_configs = true
